# probability-lab

./: .gitignore  README.md  README_Hydra.md  SETUP_REPLICATION.md  environment.yml  pyproject.toml  requirements.txt
apps/: streamlit_app.py
conf/: config.yaml
conf/data/: csv_template.yaml  survival_synth.yaml
conf/extreme/: block_maxima.yaml  disabled.yaml  peaks_over_threshold.yaml
conf/fit/: lognorm.yaml  weibull_min.yaml
conf/viz/: default.yaml
docs/: README.md  dependencies.md  editable-mode-deep-dive.md  environment-setup-guide.md  github-setup.md  installation.md  quick-start.md  setup-summary.md
docs/hydra/: README.md  SUMMARY.md  index.md  tutorial.md
examples/: survival_synthetic.csv
prob_lab/: __init__.py  config.py  fit_demo.py  registry.py
prob_lab/data/: loaders.py
prob_lab/distributions/: base.py  extreme_value.py  scipy_wrappers.py
prob_lab/distributions/docs/: README.md
prob_lab/exp/: run.py
prob_lab/fitting/: bayes.py  mle.py
prob_lab/fitting/docs/: README.md
prob_lab/survival/: lifelines_adapter.py
prob_lab/survival/docs/: README.md
prob_lab/timeseries/: ar_models.py
prob_lab/timeseries/docs/: README.md
prob_lab/visualize/: plot.py
